//go:generate protoc -I ../helloworld --go_out=plugins=grpc:../helloworld ../helloworld/helloworld.proto

syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
    rpc SendGifts (stream GiftsRequest) returns (stream GiftsReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message GiftsRequest {
    int64 quantity = 1;
    string gifts = 2;
}

message GiftsReply {
    int64 quantity = 1;
    string gifts = 2;
}